# OpenIris-ESPIDF

./: sdkconfig
components/usb_device_uvc/: CMakeLists.txt  idf_component.yml
components/wifiManager/wifiManager/: wifiManager.cpp
main/: openiris_main.cpp
